--- a/styling.css
+++ b/styling.css
@@ -1,8 +1,12 @@
 #container{
     width: 1050px;
     border: 1px solid grey;
-    height: 100px;
     margin: 0 auto;
+}
+
+#header{
+    height: 100px;
+    padding: 10px 0;
 }
 
 #brand{
@@ -19,4 +23,30 @@ h1 a{
 
 #searchBox{
     float: right;
+    background: linear-gradient(#E4F2B9, #B7E953);
+    width: 400px;
+    height: 50px;
+    padding: 20px 20px 0 20px;
+    margin-top: 20px;
 }
+
+.text{
+    float: left;
+    width: 200px;
+    padding: 5px;
+    font-size: 15px;
+    color: #E36A0C;
+    background: white url(images/searchlogotwo.png) right center no-repeat;
+
+
+}
+
+.submit{
+    float: right;
+    padding: 5px;
+    font-weight: bold;
+    color: white;
+    background: #8817c5;
+    font-size: 15px;
+}
+
