--- a/styling.css
+++ b/styling.css
@@ -48,5 +48,48 @@ h1 a{
     color: white;
     background: #8817c5;
     font-size: 15px;
+    border: 1px solid #DCD5E1;
 }
 
+.clear{
+    clear: both;
+}
+
+#menu{
+    height: 70px;
+    background: linear-gradient(#F8F594, #D5D533);
+    padding: 7px 0;
+}
+
+ul{
+    list-style: none;
+}
+
+#menu ul li{
+        float: left;
+        padding: 0 30px;    
+        height: 30px;
+        border-right: 1px solid #5d12e7;
+}
+
+#menu ul li:last-child{
+    border-right: none;
+} 
+
+#menu ul li a{
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 17px;
+    color: #5d12e7;
+    line-height: 20px;
+    -webkit-transition: font-size 0.3s ease;
+    -moz-transition: font-size 0.3s ease;
+    -o-transition: font-size 0.3s ease;
+    -ms-transition: font-size 0.3s ease;
+    transition: font-size 0.3s ease;
+}
+#menu ul li a:hover, #menu ul li a.active{
+    font-size: 20px;
+    font-weight: bold;
+    color: #861BBF;
+}
