added body paragraph

--- a/styling.css
+++ b/styling.css
@@ -93,3 +93,21 @@ ul{
     font-weight: bold;
     color: #861BBF;
 }
+
+#introduction{
+    background: linear-gradient(#E5F2BB, #B7E952);
+    padding: 30px;
+    margin: 16px 0;
+}
+
+#introduction h3{
+        font-size: 45px;
+        color: #316901;
+        font-weight: normal;
+}
+
+#introduction p{
+    font-size: 25px;
+    color: #628f19;
+    text-align: justify;
+}
