--- a/styling.css
+++ b/styling.css
@@ -1,6 +1,6 @@
 #container{
     width: 1050px;
-    border: 1px solid grey;
+    /*border: 1px solid grey;*/
     margin: 0 auto;
 }
 
@@ -36,7 +36,7 @@ h1 a{
     padding: 5px;
     font-size: 15px;
     color: #E36A0C;
-    background: white url(images/searchlogotwo.png) right center no-repeat;
+    /*background: white url(images/searchlogotwo.png) right center no-repeat;*/
 
 
 }
@@ -110,4 +110,60 @@ ul{
     font-size: 25px;
     color: #628f19;
     text-align: justify;
+}
+
+.sidebar{
+    height: 500px;
+    width: 450px;
+    border: 2px solid #BAF46F;
+    border-radius: 20px;
+    padding: 10px 30px;
+
+}
+.sidebar h3{
+    color: #861BBF;
+    font-size: 30px;
+}
+
+.sidebar ul li a{
+    text-decoration: none;
+    font-size: 20px;
+    color: #5d12e7;
+}
+.sidebar ul{
+    padding-top: 8px;
+
+}
+
+#leftsidebar ul li{
+    padding-bottom: 6px;
+    padding-left: 10px;
+    /*list-style-image: url(images/searchlogotwo.png);*/
+
+}
+
+#rightsidebar ul li{
+   padding: 17px 0 17px 70px ;
+    /* background: url(images/searchlogotwo.png) no-repeat left center; */
+}
+
+.sidebar ul li a:hover, .sidebar ul li a.active{
+    text-decoration: none;
+    color: #8817c5;
+    font-size: 23px;
+    font-weight: bold;
+    -webkit-transition: font-size 0.3s ease;
+    -moz-transition: font-size 0.3s ease;
+    -o-transition: font-size 0.3s ease;
+    -ms-transition: font-size 0.3s ease;
+    transition: font-size 0.3s ease;
+
+
+}
+#leftsidebar{
+    float: left;
+}
+
+#rightsidebar{
+    float: right;
 }
