finished footer elements

--- a/styling.css
+++ b/styling.css
@@ -1,3 +1,7 @@
+body{
+    font: Arial, Helvetica, sans-serif;
+}
+
 #container{
     width: 1050px;
     /*border: 1px solid grey;*/
@@ -37,6 +41,7 @@ h1 a{
     font-size: 15px;
     color: #E36A0C;
     /*background: white url(images/searchlogotwo.png) right center no-repeat;*/
+    border: 1px solid #C8D03E;
 
 
 }
@@ -157,8 +162,6 @@ ul{
     -o-transition: font-size 0.3s ease;
     -ms-transition: font-size 0.3s ease;
     transition: font-size 0.3s ease;
-
-
 }
 #leftsidebar{
     float: left;
@@ -166,4 +169,11 @@ ul{
 
 #rightsidebar{
     float: right;
+}
+
+.footer{
+    height: 60px;
+    background: linear-gradient(#F6F390, #D5D533);
+    padding: 10px 40px;
+    margin: 40px 0 10px 0;
 }
